[project]
name = "sample-python-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
  { name = "Geson-anko", email = "59220704+Geson-anko@users.noreply.github.com" },
]
requires-python = ">=3.12"
dependencies = [
  "hydra-core>=1.3.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
